Beer Table Header * Added a table header to the BeerTable component * Shifted the BeerButton component from above the table to inside the table header * Changed the "Beer Name" column to simply "Name" now that proper context is provided in the header * Updated the BeerButton component to be wrapped in a div instead of section since it's no longer rendered as a standalone component

--- a/src/components/beerTable/BeerTable.module.scss
+++ b/src/components/beerTable/BeerTable.module.scss
@@ -1,4 +1,15 @@
 .beerTable {
 	grid-area: table;
 	overflow: hidden;
+
+	.table-header {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: space-between;
+
+		h1 {
+			margin: 0;
+		}
+	}
 }
